--- a/10-tau-starter/public/index.html
+++ b/10-tau-starter/public/index.html
@@ -29,7 +29,7 @@
         <br>
         <br>
         <button id="close-image" style="margin-left:1em" type="bench" ispressed=false class="" onclick="updateClass(this)"><img src="icons/bench.png"></button>
-        <button id="close-image" style="margin-left:1em"  type="bathroom" ispressed=false class="" onclick="updateClass(this)"><img src="icons/toilet.png"></button>
+        <button id="close-image" style="margin-left:1em"  type="toilet" ispressed=false class="" onclick="updateClass(this)"><img src="icons/toilet.png"></button>
         <button id="close-image" style="margin-left:1em" type="workout" ispressed=false class="" onclick="updateClass(this)"><img src="icons/workout.png"></button>
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label is-upgraded" data-upgraded=",MaterialTextfield">
           <input class="mdl-textfield__input" type="text" id="description">
