--- a/10-tau-starter/public/index.html
+++ b/10-tau-starter/public/index.html
@@ -31,11 +31,11 @@
         <button id="close-image" style="margin-left:1em" type="bench" ispressed=false class="" onclick="updateClass(this)"><img src="icons/bench.png"></button>
         <button id="close-image" style="margin-left:1em"  type="toilet" ispressed=false class="" onclick="updateClass(this)"><img src="icons/toilet.png"></button>
         <button id="close-image" style="margin-left:1em" type="workout" ispressed=false class="" onclick="updateClass(this)"><img src="icons/workout.png"></button>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label is-upgraded" data-upgraded=",MaterialTextfield">
+        <div class = "mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" id="description">
           <label class="mdl-textfield__label" for="description">Description</label>
         </div>
-        
+        <input type="file" id="fileUpload" />
       </div>
       <div class="mdl-dialog__actions">
         <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--colored mdl-shadow--2dp" id="dialog-rate_save">Save</button>
