navigation button added

--- a/10-tau-starter/public/index.html
+++ b/10-tau-starter/public/index.html
@@ -18,6 +18,10 @@
 </head>
 <body>
   <div id='map'></div>
+ <button id="navigate-button" onclick="navigatetionMode()" class="mdc-fab" aria-label="Favorite">
+    <div class="mdc-fab__ripple"></div>
+    <span class="imgEdit"><img src="icons/navigate-icon.png"></span>
+  </button>
   <button id="add-pin-button" onclick="addPin()" class="mdc-fab" aria-label="Favorite">
     <div class="mdc-fab__ripple"></div>
     <span class="mdc-fab__icon material-icons">add</span>
