--- a/10-tau-starter/public/index.html
+++ b/10-tau-starter/public/index.html
@@ -36,19 +36,19 @@
         <pio class="">Type :</pio>
         <br>
         <br>
-        <button id="close-image" style="margin-left:1em" type="bench" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/bench.png"></button>
-        <button id="close-image" style="margin-left:1em"  type="toilet" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/toilet.png"></button>
-        <button id="close-image" style="margin-left:1em" type="workout" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/workout.png"></button>
+        <button id="close-image" style="margin-left:1em" type="bench" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : ספסלים"><img src="icons/bench.png"></button>
+        <button id="close-image" style="margin-left:1em"  type="toilet" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : שירותים"><img src="icons/toilet.png"></button>
+        <button id="close-image" style="margin-left:1em" type="workout" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : מתקני קושר"><img src="icons/workout.png"></button>
         <br></br>
-        <button id="close-image" style="margin-left:1em" type="byke-path" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/byke.png"></button>
-        <button id="close-image" style="margin-left:1em"  type="broken-road" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/broken-road.png"></button>
-        <button id="close-image" style="margin-left:1em" type="crowded" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/crowd.png"></button>
+        <button id="close-image" style="margin-left:1em" type="byke-path" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : מסלול אופניים"><img src="icons/byke.png"></button>
+        <button id="close-image" style="margin-left:1em"  type="broken-road" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : עובדים בדרך"><img src="icons/broken-road.png"></button>
+        <button id="close-image" style="margin-left:1em" type="crowded" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : מקום צפוף"><img src="icons/crowd.png"></button>
         <br></br>
-        <button id="close-image" style="margin-left:1em" type="park" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/park.png"></button>
-        <button id="close-image" style="margin-left:1em"  type="stairs" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/stairs.png"></button>
-        <button id="close-image" style="margin-left:1em" type="view" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/photography.png"></button>
+        <button id="close-image" style="margin-left:1em" type="park" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : פארק"><img src="icons/park.png"></button>
+        <button id="close-image" style="margin-left:1em"  type="stairs" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : מדרגות"><img src="icons/stairs.png"></button>
+        <button id="close-image" style="margin-left:1em" type="view" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : מקום יפה לצלום"><img src="icons/photography.png"></button>
         <br></br>
-        <button id="close-image" style="margin-left:1em" type="watter" ispressed=false class="" onclick="updateClass(this,false)"><img src="icons/watter.png"></button>
+        <button id="close-image" style="margin-left:1em" type="watter" ispressed=false class="" onclick="updateClass(this,false)" desc="Type : ברזית מים"><img src="icons/watter.png"></button>
         <div class = "mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" id="description">
           <label class="mdl-textfield__label" for="description">Description</label>
@@ -63,7 +63,7 @@
   <dialog id="filter-dialog" class="mdl-dialog">
       <h4 class="mdl-dialog__title">Filter options</h4>
       <div class="mdl-dialog__content">
-        <button id="close-image" style="margin-left:1em" type="bench" ispressed=false class="" onclick="updateClass(this,true)"><img src="icons/bench.png"></button>
+        <button id="close-image" style="margin-left:1em" type="bench" ispressed=false class="" onclick="updateClass(this,true)" ><img src="icons/bench.png"></button>
         <button id="close-image" style="margin-left:1em"  type="toilet" ispressed=false class="" onclick="updateClass(this,true)"><img src="icons/toilet.png"></button>
         <button id="close-image" style="margin-left:1em" type="workout" ispressed=false class="" onclick="updateClass(this,true)"><img src="icons/workout.png"></button>
         <br></br>
